feat: Update Workshops content

--- a/Workshops/Workshop2.ipynb
+++ b/Workshops/Workshop2.ipynb
@@ -1263,13 +1263,8 @@
    "source": [
     "6. WRITE YOUR CONCLUSION OF THE t-TEST\n",
     "\n",
-    "CON LOS RESULTADOS OBTENIDOS CONCLUYO QUE MI HIPOTÉSIS ES CORRECTA, CON RESPECTO A LA ALTERNATIVA DEL \"DIABLITO\", TENIENDO UN INTERVALO DE COFIANZA MUY ALTO."
+    "CON LOS RESULTADOS OBTENIDOS CONCLUYO QUE MI HIPOTÉSIS TIENE UN PORCENTAJE DE ERROR MUY BAJO, CON RESPECTO A LA ALTERNATIVA DEL \"DIABLITO\", TENIENDO UN INTERVALO DE COFIANZA MUY ALTO."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
