feat: Business case advance

--- a/Workshops/Workshop5.ipynb
+++ b/Workshops/Workshop5.ipynb
@@ -335,6 +335,71 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### __MORE ABOUT THE INTERPRETATION OF THE BETA COEFFICIENTS AND THEIR t-values AND p-values__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "THEN, IN THIS OUTPUT WE SEE THAT b0 = -0.0078, AND b1 = 1.539. WE CAN ALSO SEE THE STANDARD ERROR, t-value AND p-value OF BOTH b0 AND b1.\n",
+    "\n",
+    "b0 ON AVERAGE IS NEGATIVE, BUT IT IS NOT SIGNIFICANTLY NEGATIVE (AT THE 95% CONFIDENCE) SINCE ITS p-value>0.05 AND ITS ABSOLUTE VALUE OF t-value<2. THEN I CAN SAY THAT IT SEEMS THAT ALFA RETURN ON AVERAGE UNDERPERFORMS THE MARKET RETURN BY -0.78% (SINCE b0 = -0.0078). IN OTHER WORDS, THE EXPECTED RETURN OF ALFA WHEN THE MARKET RETURN IS ZERO IS NEGATIVE. HOWEVER, THIS IS NOT SIGNIFICANTLY LESS THAN ZERO SINCE ITS p-value>0.05! THEN, I DO NOT HAVE STATISTICAL EVIDENCE AT THE 95% CONFIDENCE LEVEL TO SAY THAT ALFA UNDERPERFORMS THE MARKET.\n",
+    "\n",
+    "b1 IS +1.53 (ON AVERAGE). SINCE ITS p-value<0.05 I CAN SAY THA b1 IS SIGNFICANTLY GREATER THAN ZERO (AT THE 95% CONFIDENCE INTERVAL). IN OTHER WORDS, I HAVE STRONG STATISTICAL EVIDENCE TO SAY THAT ALFA RETURN IS POSITIVELY RELATED TO THE MARKET RETURN SINCE ITS b1 IS SIGNIFICANTLY GREATER THAN ZERO.\n",
+    "\n",
+    "INTERPRETING THE MAGNITUDE OF b1, WE CAN SAY THAT IF THE MARKET RETURN INCREASES BY +1%, I SHOULD EXPECT THAT, ON AVERAGE,THE RETURN OF ALFA WILL INCREASE BY 1.53%. THE SAME HAPPENS IF THE MARKET RETURN LOSSES 1%, THEN IT IS EXPECTED THAT ALFA RETURN, ON AVERAGE, LOSSES ABOUT 1.53%. THEN, ON AVERAGE IT SEEMS THAT ALFA IS RISKIER THAN THE MARKET (ON AVERAGE). BUT WE NEED TO CHECK WHETHER IT IS SIGNIFICANTLY RISKIER THAN THE MARKET.\n",
+    "\n",
+    "AN IMPORTANT ANALYSIS OF b1 IS TO CHECK WHETHER b1 IS SIGNIFICANTLY MORE RISKY OR LESS RISKY THAN THE MARKET. IN OTHER WORDS, IT IS IMPORTANT TO CHECK WHETHER b1 IS LESS THAN 1 OR GREATER THAN 1. TO DO THIS CAN DO ANOTHER HYPOTHESIS TEST TO CHECK WHETHER b1 IS SIGNIFICANTLY GREATER THAN 1!\n",
+    "\n",
+    "WE CAN DO THE FOLLOWING HYPOTHESIS TEST TO CHECK WHETHER ALFA IS RISKIER THAN THE MARKET:\n",
+    "\n",
+    "H0: b1 = 1 (ALFA IS EQUALLY RISKY THAN THE MARKET)\n",
+    "Ha: b1 > 1 (ALFA IS RISKIER THAN THE MARKET)\n",
+    "\n",
+    "IN THIS HYPOTHESIS, THE VARIABLE OF ANALYSIS IS BETA1 (b1).\n",
+    "\n",
+    "FOLLOWING THE HYPOTHESIS TEST METHOD, WE CALCULATE THE CORRESPONDING t-value OF THIS HYPOTHESIS AS FOLLOWS:\n",
+    "\n",
+    "$$t=\\frac{(B_{1}-1)}{SD(B_{1})}$$\n",
+    "\n",
+    "THEN, t = (1.539 - 1) / 0.287 = 1.87. THIS VALUE IS NOT AUTOMATICALLY CALCULATED IN THE REGRESSION OUTPUT.\n",
+    "\n",
+    "SINCE t-value is close to 2, IT IS HARD TO SAY THAT BETA1 IS SIGNIFICANTLY GREATER THAN 1 AT THE 95% CONFIDENCE INTERVAL. WE NEED TO CALCULAT ITS CORRESPONDING p-value. IF THE P-VALUE IS 0.06, THEN WE CAN SAY THAT WE HAVE EVIDENCE AT THE 94% CONFIDENCE TO REJECT THE NULL HYPOTHESIS. IN OTHER WORDS, WE CAN SAY THAT ALFA IS SIGNIFICANTLY RISKIER THAN THE MARKET (AT THE 94% CONFIDENCE LEVEL).\n",
+    "\n",
+    "IT IS IMPORTANT THAT YOU USE YOUR CRITERIA FOR THE P-VALUE OF THE TEST ACCORDING TO THE CONTEXT OF THE PROBLEM. IT IS NOT AN EASY RULE TO REJECT THE NULL IF THE t-VALUE is >2!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### __95% CONFIDENCE INTERVAL OF THE BETA COEFFICIENTS__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "WE CAN USE THE 95% CONFIDENCE INTERVAL OF BETA COEFFICIENTS AS AN ALTERNATIVE TO MAKE CONCLUSIONS ABOUT b0 AND b1 (INSTEAD OF USING t-values AND p-values).\n",
+    "\n",
+    "IN THIS CASE WE SEE THAT THE MINIMUM VALUE OF THE 95% C.I. OF b1 IS 0.963, AND ITS MAXIMUM IS 2.11. THESE VALUES ARE CACLULATED FROM THE MEAN BETA AND ADDING AND SUBTRACTING ABOUT 2 TIMES ITS STANDARD ERROR.\n",
+    "\n",
+    "THE FIRST ROW SHOWS THE 95% CONFIDENCE INTERVAL FOR b0, AND THE SECOND ROW SHOWS THE CONFIDENCE INTERVAL OF b1.\n",
+    "\n",
+    "__HOW WE INTERPRET THE 95% CONFIDENCE INTERVAL FOR b0?__\n",
+    "IN THE NEAR FUTURE, b0 CAN HAVE A VALUE BETWEEN `r cibetas[1,1]` AND `r cibetas[1,2]` 95% OF THE TIME. IN OTHER WORDS B0 CAN MOVE FROM A NEGATIVE VALUE TO ZERO TO A POSITIVE VALUE. THEN, WE CANNOT SAY THAT 95% OF THE TIME, B0 WILL BE NEGATIVE. IN OTHER WORDS, WE CONCLUDE THAT b0 IS NOT SIGNIFICANTLY NEGATIVE AT THE 95% CONFIDENCE LEVEL.\n",
+    "\n",
+    "HOW OFTEN b0 WILL BE NEGATIVE? LOOKING AT THE 95% CONFIDENCE INTERVAL, b0 WILL BE NEGATIVE MORE THAN 50% OF THE TIME. BEING MORE SPECIFIC, WE CALCULATE THIS BY SUBTRACTING THE p-value FROM 1: (1-pvalue). IN THIS CASE, THE P-VALUE= 0.6. THEN (1-0.6)= 40% OF THE TIME b0 WILL BE POSITIVE!\n",
+    "\n",
+    "__HOW WE INTERPRET THE 95% CONFIDENCE INTERVAL FOR B1?__\n",
+    "IN THE NEAR FUTURE, b1 CAN MOVE BETWEEN 0.96 AND 2.11 95% OF THE TIME. IN OTHER WORDS, b1 CAN HAVE A VALUE GREATER THAN 1 AROUND 93% OF THE TIME. THEN, WE CAN SAY THAT b1 IS SIGNIFICANTLY POSITIVE AND GREATER THAN 1 AT THE 93%. IN OTHER WORDS, ALFA IS SIGNIFICANTLY RISKIER THAN THE MARKET SINCE ITS B1>1 AT LEAST 93% OF THE TIME."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
